# pixie-firmware

./: .gitignore  CHANGELOG.md  FLASHING.md  QR_REFACTOR_PLAN.md  README.md  STRUCTURE.md  WALLET.md  build.sh  find-device.sh  flash-native.sh  flash.sh  generate.sh  newfirmware.md  sdkconfig
components/firefly-ethers/src/: address.c
main/: CMakeLists.txt  main.c  panel-buttontest.c  panel-buttontest.h  panel-gifs.c  panel-menu.c  panel-pong.c  panel-pong.h  panel-snake.c  panel-snake.h  panel-space.c  panel-tetris.c  panel-tetris.h  panel-wallet.c  panel-wallet.h  qr-generator.c  qr-generator.h  task-io.c  task-io.h  utils.c
main/images/: image-firefly-qr.h
